--- a/project/web/package.json
+++ b/project/web/package.json
@@ -7,6 +7,11 @@
     "@chakra-ui/react": "^2.4.6",
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
+    "@graphql-codegen/add": "^3.2.3",
+    "@graphql-codegen/cli": "^2.16.4",
+    "@graphql-codegen/typescript": "^2.8.7",
+    "@graphql-codegen/typescript-operations": "^2.5.12",
+    "@graphql-codegen/typescript-react-apollo": "^3.3.7",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^14.1.0",
