Fix(-): codegen.yml 오타 수정

--- a/project/web/codegen.yml
+++ b/project/web/codegen.yml
@@ -8,4 +8,4 @@ generates:
         content: '/* eslint-disable */'
       - "typescript"
       - "typescript-operations"
-      - "typescrip-react-apollo"
+      - "typescript-react-apollo"
