--- a/project/web/package.json
+++ b/project/web/package.json
@@ -24,6 +24,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^3.0.0",
+    "react-router-dom": "5.2",
     "react-scripts": "5.0.1",
     "react-waypoint": "^10.3.0",
     "typescript": "^4.6.3",
@@ -50,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-router-dom": "5.1.7"
   }
 }
