--- a/project/web/package.json
+++ b/project/web/package.json
@@ -24,6 +24,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^3.0.0",
+    "react-lazyload": "^3.2.0",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
     "react-waypoint": "^10.3.0",
@@ -57,6 +58,7 @@
     "@graphql-codegen/cli": "^1.21.8",
     "@graphql-codegen/typescript": "^1.23.0",
     "@graphql-codegen/typescript-operations": "^1.18.4",
-    "@graphql-codegen/typescript-react-apollo": "^2.3.1"
+    "@graphql-codegen/typescript-react-apollo": "^2.3.1",
+    "@types/react-lazyload": "^3.2.0"
   }
 }
