--- a/project/server/package.json
+++ b/project/server/package.json
@@ -23,10 +23,12 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "express": "^4.18.2",
     "graphql": "^15.5.1",
+    "mysql2": "^3.2.0",
     "prettier": "^2.8.1",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^10.9.1",
     "type-graphql": "^1.1.1",
+    "typeorm": "^0.2.37",
     "typescript": "^4.9.4"
   },
   "devDependencies": {
