--- a/project/web/package.json
+++ b/project/web/package.json
@@ -23,6 +23,7 @@
     "graphql": "^15.7.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-hook-form": "^7.43.9",
     "react-icons": "^3.0.0",
     "react-lazyload": "^3.2.0",
     "react-router-dom": "^6.8.0",
