--- a/project/server/package.json
+++ b/project/server/package.json
@@ -23,7 +23,9 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "express": "^4.18.2",
     "graphql": "^15.5.1",
+    "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.2.0",
+    "nanoid": "^4.0.2",
     "prettier": "^2.8.1",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^10.9.1",
@@ -32,6 +34,8 @@
     "typescript": "^4.9.4"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/nanoid": "^3.0.0",
     "nodemon": "^2.0.20"
   }
 }
