Fix: me 쿼리 에러 및 FilmList key 값 수정

--- a/project/server/tsconfig.json
+++ b/project/server/tsconfig.json
@@ -3,6 +3,6 @@
 		"experimentalDecorators": true,
 		"emitDecoratorMetadata": true,
 		"esModuleInterop": true,
-		"target": "ES5"
-	}
-}
+		"target": "es6",
+		}
+}	
