--- a/project/server/package.json
+++ b/project/server/package.json
@@ -13,6 +13,7 @@
     "@typescript-eslint/parser": "^5.48.0",
     "apollo-server-core": "^3.11.1",
     "apollo-server-express": "^3.11.1",
+    "cookie-parser": "^1.4.6",
     "eslint": "^8.31.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.6.0",
@@ -23,7 +24,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "express": "^4.18.2",
     "graphql": "^15.5.1",
-    "jsonwebtoken": "^9.0.0",
+    "ioredis": "^4.28.0",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^3.2.0",
     "nanoid": "^4.0.2",
     "prettier": "^2.8.1",
@@ -34,6 +36,8 @@
     "typescript": "^4.9.4"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.2",
+    "@types/ioredis": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/nanoid": "^3.0.0",
     "nodemon": "^2.0.20"
