--- a/project/server/package.json
+++ b/project/server/package.json
@@ -14,6 +14,7 @@
     "apollo-server-core": "^3.11.1",
     "apollo-server-express": "^3.11.1",
     "cookie-parser": "^1.4.6",
+    "dataloader": "^2.2.2",
     "eslint": "^8.31.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.6.0",
